<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Delmar</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string-array name="jsons_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="refresh">Refresh</string>
    <string name="action_news">News</string>
    <string name="action_location">Location</string>
    <string name="action_pars">PARS</string>
    <string name="title_activity_location">Location</string>
    <string name="title_activity_news">News</string>
    <string name="action_facebook">facebook</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_delmar_title">About Delmar!</string>
    <string name="about_text">Delmar is open source, please feel free to contribute via GitHub. This app is not associated with Google in any way.\n\nVisit us on:</string>
    <string name="about_location_title">Location</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="location_authority">io.delmar.provider.location</string>
    <string name="title_activity_location_list_volley">Location</string>
    <string name="title_section1">offices</string>
    <string name="title_section2">agents(air)</string>
    <string name="title_section3">agents(ocean)</string>
    <string name="title_search">Search</string>
    <string name="no_network_connection">No Network Connection!</string>
    <string name="not_valid">Not Valid!</string>
    <!-- searchable -->
    <string name="app_label">Search</string>
    <string name="search_hint">Search Hint</string>
    <string name="pars_result_hint">Search result will be shown below.</string>
    <string name="server_error">Server Error</string>
    <string name="json_error">JSON Error</string>
    <string name="pars_not_found">PARS Not Found!</string>
</resources>
