<menu xmlns:delmario="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_websearch"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_websearch"
        delmario:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        delmario:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        delmario:showAsAction="never"/>
    <item
        android:id="@+id/action_facebook"
        android:title="@string/action_facebook"
        delmario:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        delmario:showAsAction="never"/>
</menu>